# ilitia-test-ag-ui

./: .gitignore  README.md
.devcontainer/: devcontainer.json
backend/: .env.example  main.py  pyproject.toml
backend/agents/: __init__.py  recipe_agent.py  theme_agent.py
frontend/: .env.example  .gitignore  pyproject.toml  rxconfig.py
frontend/agui_demos/: __init__.py  agui_demos.py
frontend/agui_demos/demos/: __init__.py
frontend/agui_demos/demos/recipe/: __init__.py  page.py  state.py
frontend/agui_demos/demos/recipe/components/: __init__.py  chat.py  floating_chat.py  recipe_card.py  recipe_form.py
frontend/agui_demos/demos/theme/: __init__.py  page.py  state.py
frontend/agui_demos/demos/theme/components/: __init__.py  demo_cards.py  theme_chat.py
frontend/agui_demos/shared/: __init__.py  ag_ui_client.py  sidebar.py
frontend/recipe_app/: __init__.py  recipe_app.py  state.py
frontend/recipe_app/components/: __init__.py  floating_chat.py  ingredients.py  recipe_card.py  recipe_form.py  sidebar.py
